# Cubiclean_Farm_Robot

./: .$flutter_app_widget_design.drawio.bkp  .gitignore  README.md  bot_get_readings.py  bot_main.py  flutter_app_widget_design.drawio  server_main.py
Data_Site/: Extract_Files.py  cubiclean_bed_viewer_cards_refined.py  desktop.ini  sci_i2c_logger_unified.py
bed_data/: BED1_P1_2026-02-21_1300.csv  BED1_P1_2026-02-22_0900.csv  BED1_P1_2026-02-22_1300.csv  BED1_P1_2026-02-22_1700.csv  BED1_P2_2026-02-20_0900.csv  BED1_P2_2026-02-20_1300.csv  BED1_P2_2026-02-21_0900.csv  BED1_P2_2026-02-21_1700.csv  BED1_P2_2026-02-22_0900.csv  BED1_P2_2026-02-22_1300.csv  BED1_P2_2026-02-24_0900.csv  BED1_P3_2026-02-20_0900.csv  BED1_P3_2026-02-20_1700.csv  BED1_P3_2026-02-24_0900.csv  BED1_P4_2026-02-20_0900.csv  BED1_P4_2026-02-20_1700.csv  BED1_P4_2026-02-21_1700.csv  BED1_P5_2026-02-20_0900.csv  BED1_P5_2026-02-20_1300.csv  BED1_P5_2026-02-20_1700.csv  BED1_P5_2026-02-21_1300.csv  (+107 more)
data_viewer/: README.md  (+3 more)
turtlebot3_ws/src/turtlebot3/turtlebot3_autonomy/: CMakeLists.txt  package.xml  package_structure.txt  setup.cfg  setup.py
turtlebot3_ws/src/turtlebot3/turtlebot3_autonomy/config/: cubiclean_view.rviz  waypoints.yaml
turtlebot3_ws/src/turtlebot3/turtlebot3_autonomy/launch/: autonomous_nav.launch.py
turtlebot3_ws/src/turtlebot3/turtlebot3_autonomy/maps/: map.pgm  map.yaml
turtlebot3_ws/src/turtlebot3/turtlebot3_autonomy/turtlebot3_autonomy/: robot_monitor.py  waypoint_mission.py
turtlebot3_ws/src/turtlebot3/turtlebot3_autonomy/turtlebot3_autonomy/utils/: battery_monitor.py
(+903 files in other folders)
